some cleaner stats, plus a monday's worth of work.

--- a/scratch/stats-full.html
+++ b/scratch/stats-full.html
@@ -32,13 +32,14 @@ large {
  
 // The units and dimensions to visualize, in order.
 var units = {
-  "process-searchd-running": {name: "search", unit: ""},
-  "process-httpd-running": {name: "httpd", unit: ""},
-  "load-one-average": {name: "load 1", unit: ""},
-  "load-five-average": {name: "load 5", unit: ""},
-  "load-fifteen-average": {name: "load 15", unit: ""},
-  "memory-swap-free": {name: "swap", unit: ""},
-  "memory-physical-free": {name: "memory", unit: ""},
+  "process-searchd-running": {name: "search", unit: " Processes"},
+  "process-httpd-running": {name: "httpd", unit: " Processes"},
+  "load-one-average": {name: "load 1", unit: " CPU%"},
+  "load-five-average": {name: "load 5", unit: " CPU%"},
+  "load-fifteen-average": {name: "load 15", unit: " CPU%"},
+  "memory-swap-free": {name: "swap-free", unit: "M"},
+  "memory-swap-total": {name: "swap-total", unit: "M"},
+  "memory-physical-free": {name: "memory-free", unit: "M"},
   "hour": {name: "hour", unit: ""},
 }
 
